* Admin UX: Generic filter controls refactored
* Admin UX: Cope with local .mediadef file (JSON format wich superseeds insertion defaults)
* Theme: Remove left border for (aside) sidebar of Berlin theme
* Core: Add third-party repository option for modules (plugins and themes)
* Core: Asynchronous check store update on dashboard
* Core: Add constant (DC_ALLOW_REPOSITORIES) to disable third party repo
* Core: Open admin search page to other type (WIP)
* Core: Remove currywurst template set (never used)
* Core: Add color, email, number types for widget settings
* Core: Fix determination of « republished » state of post
* Core: Cope with IPv6 addresses
* Core: Create DC_TPL_CACHE directory if necessary
* Core: Add IP v6 antispam filter (only enabled if GMP or BC Math library is available)
* Core: Add standard nethttp timeout constant (DC_QUERY_TIMEOUT)
* Core: Add alternatives Emails and URLs for users in My Preferences and User Profile (super-admin only)
* Fix: Cope with DotAddict server not responding
* Fix: Cope with isolated figcaption for remove_html and strip_tags tpl attributes
* Fix: Allow modification of "official" themes if they are not in distributed folder (themes) of Dotclear
* Fix: RSS style, fix css responsive + fix input
* Fix: Ensure theme's settings namespace exists
* Fix: Ensure DC_VAR constant exists before using it
* Fix: Fix favicon path in auth page
* Fix: Allow https protocol for trackbacks
* Fix: Fix IPv4 antispam filter for subnet mask > 32
* Fix: Fix plugins privileges on config file
* Fix: Uses the same font in the CKEditor editor as the rest of the administration
* Fix: CKEditor sometimes add a t parameter to a request URL (background sprite image), ignore it
* Lib: Update CKEditor from 4.16.1 to 4.16.2 (with local additional fixes in CKEditor jQuery adapter)
* Lib: Update Codemirror 5.62.0 from to 5.63.3
* Lib: Update jQuery UI (custom) from 1.12.1 to 1.13.0
* ClearBricks: Allow legitimate .. in media filenames